# goffice

./: configure.ac
goffice/: Makefile.am
goffice/math/: go-R.c  go-math.c
